hetz/nginx-spacemule/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-static
  name: nginx-spacemule-deployment
  labels:
    app: nginx-spacemule
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-spacemule
  template:
    metadata:
      labels:
        app: nginx-spacemule
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - nginx-spacemule
              topologyKey: kubernetes.io/hostname
      containers:
      - image: nginx:stable
        name: nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
        securityContext:
          capabilities: {}
        volumeMounts:
          - name: nginx-spacemule-mount
            mountPath: /usr/share/nginx/html
            subPath: spacemule/public
          - name: nginx-conf-spacemule
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            readOnly: true
        ports:
          - containerPort: 80
            name: nginx-http
      volumes:
      - name: nginx-spacemule-mount
        emptyDir:
          sizeLimit: 250Mi
      - name: nginx-conf-spacemule
        configMap:
          name: nginx-conf-spacemule
          items:
            - key: nginx.conf
              path: nginx.conf
