hetz/nginx-spacemule/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-spacemule-service
  namespace: nginx-static
spec:
  type: ClusterIP
  selector:
    app: nginx-spacemule
  ports:
    - name: nginx-spacemule-service
      protocol: TCP
      port: 8082
      targetPort: nginx-http
